# registerT2andfeatures

./: add_newrecords.py  example_coords.txt  mylocalbase.py  mylocaldatabase.py  newFeatures.py  newregisterStage1T2updatedFeatures.db  query_localdatabase.py  registerT2andfeatures.py  sendNew2_registerdatabase.py  untitled3.py  viewStage1T2updatedFeatures.txt
backups/: newregisterStage1T2updatedFeatures.db
dcm23d/src/: CMakeLists.txt  NOTICE.txt  README.md  dcm23d.cpp
